<resources>
    <string name="app_name">Huddle</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_main_activity">Main Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--used in the event detail fragment-->
    <string name="attend">Attend</string>
    <string name="invite">Invite</string>

    <string name="title_activity_event_detail">EventDetailActivity</string>


    <string name="username">Username&#58;</string>

    <string name="google_maps_api_key">AIzaSyBBLpDH0cX2ISEBAglJGHAbsI-4-HKfBLI</string>
    <string name="google_places_api_key">AIzaSyDgpj2uUTodiKhmj3GsCzfiZvvK1s8t0Ok</string>

    <string name="gcm_sender_id">id:932123556269</string>
    <string name="check_final_details">Verify</string>
    <string name="price">Price:</string>
    <string name="phonenumber">Contact:</string>
    <string name="rating">Rating:</string>
    <string name="send_invite">Send Invite</string>
    <string name="add_freind"> Add friend</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="from_time">Event Start:</string>
    <string name="to_time">Event End:</string>
    <string name="maybe">Maybe</string>
    <string name="no_attend">Nope</string>
    <string name="save">Save</string>
    <string name="joinme">Join the event!</string>
    <string name="nearby">Nearby</string>
    <string name="invites">Invites</string>
    <string name="places">Places</string>
</resources>
